2015-06-02  Mark Lam  <mark.lam@apple.com>

        build-jsc's --cloop option is broken.
        https://bugs.webkit.org/show_bug.cgi?id=145516

        Reviewed by Darin Adler.

        * Scripts/build-jsc:
        - Make sure to disable the JIT when --cloop is specified.
          Did analogous fix for --ftljit.

2015-06-02  Daniel Bates  <dabates@apple.com>

        Update ATS keys used in MiniBrowser and WebKitTestRunnerApp

        Rubber-stamped by Alexey Proskuryakov.

        * MiniBrowser/mac/Info.plist:
        * WebKitTestRunner/WebKitTestRunnerApp/WebKitTestRunnerApp-Info.plist:

2015-06-01  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r185066.
        https://bugs.webkit.org/show_bug.cgi?id=145543

        it breaks the FTL JIT builds with a local checkout of llvm
        (Requested by pizlo on #webkit).

        Reverted changeset:

        "build-jsc's --cloop option is broken."
        https://bugs.webkit.org/show_bug.cgi?id=145516
        http://trac.webkit.org/changeset/185066

2015-06-01  Daniel Bates  <dabates@apple.com>

        Notify client that we began editing when text field is focused
        https://bugs.webkit.org/show_bug.cgi?id=145439
        <rdar://problem/21142108>

        Reviewed by Anders Carlsson.

        Add API test to ensure that we dispatch textFieldDid{Begin, End}Editing callbacks when
        a text field is focused and defocused.

        * TestWebKitAPI/CMakeLists.txt:
        * TestWebKitAPI/PlatformEfl.cmake:
        * TestWebKitAPI/PlatformGTK.cmake:
        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKit2/TextFieldDidBeginAndEndEditing.cpp: Added.
        (TestWebKitAPI::WebKit2TextFieldBeginAndEditEditingTest::didReceiveMessageFromInjectedBundle):
        (TestWebKitAPI::WebKit2TextFieldBeginAndEditEditingTest::didFinishLoadForFrame):
        (TestWebKitAPI::WebKit2TextFieldBeginAndEditEditingTest::setInjectedBundleClient):